# linux-Utilits

./: CMakeLists.txt  LICENSE  README.md  RegionPolicies.cpp  RegionPolicies.hpp  main.cpp
core/: processmanager.cpp  processmanager.h
core/Process/: IProcess.hpp  MemoryReader.hpp  ModuleFilter.cpp  ModuleFilter.hpp  ModuleMapParser.cpp  ModuleMapParser.hpp  ProcessFinder.cpp  ProcessFinder.hpp  ProcessReader.cpp  ProcessReader.hpp  ProcessScanner.cpp  ProcessScanner.hpp
core/Scanner/: scanSession.cpp  scanSession.hpp  scanner.cpp  scanner.hpp  value.cpp  value.hpp
